influences from my experiences with the former kwm.


In 0.10:
--------
  patchlevel 15:
       - transient windows are iconified/deiconified with their parent
         window. They also dissappear for the modules and the Mod1-Tab
         traversal if they were automatically iconified.
       - new commandline option "-nosession" to disable the restoration
         of the previous session.
          
  patchlevel 14:
       - new keybindings Control-F[1..8] for virtual desktop switching
       - new option "ControlTab=[on,off]" to switch off the Control-Tab
         shortcut.
       - fixed the "last window is iconified and deficonified"-focus-
         follows-mouse-bug
       - fixed the autoraise-over-operations-menu bug 
       - Uwe's fix for the timing problem of the resize animation
       - history command completion with Tab in minicli
       - KProcess for execution
       - Fix for unsavedDataHint handling

  patchlevel 13:
       - new decoration style (tiny decoration). Useful for floating
         menu- or toolbars. Can be set via KWM::setDecoration(...)
       - KWM::geometry(Window w, bool including_frame = FALSE) has
         including_frame as additional argument. Useful for
         pager modules.
       - workaround to the "X freezes when pasting in minicli"-bug
         
  patchlevel 12:
       - new command "execute" for minicli (temporary solution until
         we finally get a real kcli)

  patchlevel 11:
       - session management for unamanged windows modified. Since this
         is a KDE special for applications like kfm, other programms
         make trouble (for example Netscape 4) (Needs current libkdecore!)
       - session management fix (Netscape 3 et. al.)
       - placement: transient windows always on the desktop of their parent
       - desktop placement fixed for withdraw-by-client windows
       - maximize/sticky fixed (bug with hidden buttons)
       - For modules: no kwm_win_change before kwm_win_add (hopefully)