@@ -167,6 +167,11 @@ Answer: Yes it is. You simple have to go through kwm.h/kwm.C from
     ResizeAnimation=on, off
     ControlTab=on, off
 
+    [session]
+    proxyignore=xemacs,xterm,..., 
+       List of WM_COMMANDS that should be ignore for session 
+       management. Only for hackers!
+
 
 6) COMMAND LINE OPTIONS
 =======================
